--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@types/react-transition-group": "^4.4.12",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.23.0",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.6.0",
     "react-intersection-observer": "^9.16.0",
